--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -263,7 +263,7 @@
                 left: 7.4vw;
                 bottom: 15vh;
                 background-image: url('../../assets/img/cte-nfe-mdfe.png');
-                animation: apps 2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+                animation: apps 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
                 animation-fill-mode: forwards;
                 
                 @keyframes apps {
@@ -386,15 +386,59 @@
     
     .game__scene,
     .game__mountains {
-        left: -2500px;
+        left: -2260px;
     }
+
+    .game__truck,
+    .game__truck.--guep {
+        left: 11vw;
+        z-index: 1;
+    }
+
 }
 
 .game__scenario.--step7 {
     
     .game__scene,
     .game__mountains {
-        left: -3000px;
+        left: -2500px;
+    }
+
+    .game__truck.--guep {
+        left: 100vw;
+    }
+
+    .game__truck {
+        left: 75vw;
+        z-index: 1;
+
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            background-image: url('../../assets/img/smoke.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            bottom: -2.8vh;
+            left: 0.2vw;
+            z-index: 2;
+            animation: smoke 8s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            
+            @keyframes smoke {
+                from {
+                    opacity: 0;
+                    height: 0;
+                    width: 0;
+                }
+                
+                to {
+                    opacity: 1;
+                    height: 3vh;
+                    width: 3vw;
+                }
+            }
+        }
     }
 }
 
