--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,22 +542,25 @@ p {
   left: 100vw;
 }
 /* line 411, ../../sass/blocks/_scene.scss */
-.game__scenario.--step7 .game__truck {
+.game__scenario.--step7 .game__truck.--concorrente {
   left: 75vw;
   z-index: 1;
 }
 /* line 415, ../../sass/blocks/_scene.scss */
-.game__scenario.--step7 .game__truck::after {
+.game__scenario.--step7 .game__truck.--concorrente:after, .game__scenario.--step7 .game__truck.--concorrente:before {
   content: '';
   display: block;
   position: absolute;
-  background-image: url("../../assets/img/smoke.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  z-index: 2;
+}
+/* line 426, ../../sass/blocks/_scene.scss */
+.game__scenario.--step7 .game__truck.--concorrente:after {
   bottom: -2.8vh;
   left: 0.2vw;
-  z-index: 2;
+  background-image: url("../../assets/img/smoke.png");
   animation: smoke 8s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 @keyframes smoke {
@@ -573,12 +576,33 @@ p {
   }
 }
 /* line 447, ../../sass/blocks/_scene.scss */
+.game__scenario.--step7 .game__truck.--concorrente:before {
+  background-image: url("../../assets/img/caixas.png");
+  z-index: 1;
+  animation: caixas 5s ease-in;
+  animation-fill-mode: forwards;
+}
+@keyframes caixas {
+  from {
+    height: 0;
+    width: 0;
+    right: 7vw;
+    bottom: 0vw;
+  }
+  to {
+    right: 11vw;
+    bottom: -2vw;
+    width: 4vw;
+    height: 6vh;
+  }
+}
+/* line 475, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__scene,
 .game__scenario.--step8 .game__mountains {
   left: -3500px;
 }
 
-/* line 455, ../../sass/blocks/_scene.scss */
+/* line 483, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__scene,
 .game__scenario.--step9 .game__mountains {
   left: -4000px;
