--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -13,13 +13,13 @@
         overflow: hidden;
         white-space: nowrap; 
         margin: 0 auto; 
-        animation: typing 3s steps(76,end);
+        animation: typing 3s steps(300,end);
         z-index: 2;
-        width: 536px;
+        width: 55vw;
 
         @keyframes typing {
             from { width: 0 }
-            to { width: 536px }
+            to { width: 55vw }
         }
     }
 }
