--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -5,6 +5,7 @@
 
 .game__quote {
     & {
+        display: none;
         position: absolute;
         font-size: 1.2vw;
         text-align: center;
@@ -13,15 +14,22 @@
         overflow: hidden;
         white-space: nowrap; 
         margin: 0 auto; 
-        animation: typing 3s steps(300,end);
         z-index: 2;
         width: 55vw;
+        top: 10vh;
+        left: 50%;
+        transform: translate(-50%);
+    }
+
+    &.--is-active {
+        display: block;
+        animation: typing 3s steps(300,end);
+    }
 
         @keyframes typing {
             from { width: 0 }
             to { width: 55vw }
         }
-    }
 }
 
 .game__scenario {
