--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -407,7 +407,48 @@
     }
 
     .game__truck.--guep {
-        left: 100vw;
+        left: 76vw;
+
+        &:after,
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            z-index: 2;
+        }
+
+        &:after {
+            bottom: -2.8vh;
+            left: 0.2vw;
+            background-image: url('../../assets/img/smoke.png');
+            animation: smoke 8s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            
+            @keyframes smoke {
+                from {
+                    opacity: 0;
+                    height: 0;
+                    width: 0;
+                }
+                
+                to {
+                    opacity: 1;
+                    height: 3vh;
+                    width: 3vw;
+                }
+            }
+        }
+
+        &:before {
+            left: 8vw;
+            width: 5vw;
+            height: 8vw;
+            bottom: 2.8vh;
+            left: 9vw;
+            background-image: url('../../assets/img/hand-check-phone.png');
+        }
     }
 
     .game__truck.--concorrente {
